--- a/src/components/ChatReveal.module.css
+++ b/src/components/ChatReveal.module.css
@@ -62,6 +62,6 @@
 
 @media (max-width: 768px) {
     .mockup {
-        width: 180px;
+        width: 160px;
     }
 }
